--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,18 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Welcome To My Website 
+email: Brian.Douglass@mac.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Hello! My name is Brian This is my first try at a website so please
+  check back often as I add new content. I am currently finishing my 
+  final year at The University of Colorado Boulder working on a degree
+  in Electrical and Computer Engineering.
+python del powerline_setup
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://www.brian-douglass.com" # the base hostname & protocol for your site
+twitter_username: @brianmdouglass
+github_username:  briandouglass
 
 # Build settings
 markdown: kramdown
