--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,14 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'jekyll serve'. If you change this file, please restart the server process.
 
+# Where things are
+source:       .
+destination:  ./_site
+plugins_dir:  _plugins
+layouts_dir:  _layouts
+# data_dir:     _data
+includes_dir: _includes
+
 # Site settings
 title: Welcome To My Website
 email: Brian.Douglass@mac.com
